# FBDS

./: .gitignore  CMakeLists.txt  ccontainerfbd.cpp  cfbdbuilder.cpp  cfunctionblock.cpp  cfunctionblock.h  cinput.cpp  coutput.h  csiggen.cpp  csiggen.h  csimengine.h  csimulatorfbd.cpp  csimulatorfbd.h  main.cpp  stimestamp.h  test_auto.cpp  test_coperacyjny.cpp
.github/: copilot-instructions.md
.github/instructions/: segregated-files.instructions.md
src/: main.cpp
src/builder/: cfbdbuilder.cpp  cfbdbuilder.h
src/engine/: ccontainerfbd.cpp  ccontainerfbd.h  csimengine.cpp  csimulatorfbd.cpp  csimulatorfbd.h
src/frontend/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simulatorbridge.cpp  simulatorbridge.h
src/frontend/resources/: example_scheme.json
src/frontend/views/: canvaspanel.cpp  canvaspanel.h  canvaspanel.ui  dashboardview.cpp  dashboardview.h  dashboardview.ui  fbdcanvasview.cpp  fbdcanvasview.h  propertypanel.cpp  propertypanel.h  propertypanel.ui
src/generator/: cconstval.cpp  cconstval.h  cfromcsv.cpp  cfromcsv.h  cmathfunc.cpp  cmathfunc.h  csiggen.cpp  csiggen.h  csingen.cpp  csingen.h
src/model/: cconnection.cpp  cconnection.h  cfunctionblock.cpp  cfunctionblock.h  cinput.cpp  cinput.h  coutput.cpp  coutput.h  sdatasample.cpp  sdatasample.h  stimestamp.cpp
src/odbiornik/: codbiornik.cpp  codbiornik.h  cwritetofile.cpp  cwritetofile.h
src/operacje/: caddsub.cpp  caddsub.h  cgain.cpp  cgain.h  cintegral.cpp  cintegral.h  coperacyjny.cpp  coperacyjny.h
tests/: cfbdbuilder_tests.cpp  cfunctionblock_tests.cpp  coperacyjny_tests.cpp  csiggen_tests.cpp  csimengine_tests.cpp  odbiornik_tests.cpp
